Updated validation notebook with more methods

--- a/notebooks_publication/validation_tran.ipynb
+++ b/notebooks_publication/validation_tran.ipynb
@@ -80,8 +80,8 @@
     "def load_selected_elements(sample):\n",
     "    return pd.read_csv(os.path.join(basepath, basedir, sample, vacfile))\n",
     "def load_predictions(sample):\n",
-    "    df = pd.read_csv(os.path.join(basepath, basedir, sample, predfile.format(sample)), sep='\\t',\n",
-    "                       usecols=['Mutation', 'Epitope Seq', 'NetMHC Score', 'NetMHC Percentile'])\n",
+    "    df = pd.read_csv(os.path.join(basepath, basedir, sample, predfile.format(sample)), sep='\\t')\n",
+    "                       #usecols=['Mutation', 'Epitope Seq', 'NetMHC Score', 'NetMHC Percentile'])\n",
     "    # Sample specific cleanup\n",
     "    if sample == '3812':\n",
     "        df['Mutation'] = df['Mutation'].apply(lambda x: x.replace('.', ''))\n",
@@ -215,9 +215,27 @@
    "outputs": [],
    "source": [
     "# Get best prediction score for each mutation\n",
-    "for sample in samples:\n",
-    "    ts_pred = list()\n",
-    "    ts_rank = list()\n",
+    "\n",
+    "pred_m = [\n",
+    "    'NetMHC Score', \n",
+    "    'NetMHCpan Score', \n",
+    "    'NetMHCcons Score', \n",
+    "    'MHCflurry Score', \n",
+    "    'MHCnuggetsI Score',\n",
+    "    'PickPocket Score']\n",
+    "rank_m = [\n",
+    "    'NetMHC Percentile',\n",
+    "    'NetMHCpan Percentile',\n",
+    "    'NetMHCcons Percentile', \n",
+    "    'MHCflurry Percentile', \n",
+    "#    'MHCnuggetsI Percentile',\n",
+    "    'PickPocket Percentile']\n",
+    "\n",
+    "for sample in samples:   \n",
+    "    ts_pred = dict()\n",
+    "    for m in pred_m: ts_pred[m] = list()\n",
+    "    ts_rank = dict()\n",
+    "    for m in rank_m: ts_rank[m] = list()\n",
     "    df_pred = load_predictions(sample)\n",
     "    df_pred['Mutation'] = df_pred['Mutation'].apply(\n",
     "        lambda x: '_'.join(\n",
@@ -228,17 +246,20 @@
     "        lambda x: '_'.join([x.split('_')[0], ''.join([i for i in x.split('_')[1] if not i.isdigit()])]))\n",
     "    df_mut = get_mutations_sim(sample)\n",
     "    for mut in df_mut['Mutation_ID'].unique():\n",
-    "        if mut in df_pred['Mutation'].unique():\n",
-    "            minpred = df_pred[df_pred['Mutation'] == mut]['NetMHC Score'].idxmin()\n",
-    "            if df_pred.loc[minpred]['NetMHC Score'] <= 500:\n",
-    "                ts_pred.append(df_pred.loc[minpred])\n",
-    "            minrank = df_pred[df_pred['Mutation'] == mut]['NetMHC Percentile'].idxmin()\n",
-    "            if df_pred.loc[minrank]['NetMHC Percentile'] <= 2:\n",
-    "                ts_rank.append(df_pred.loc[minrank])\n",
+    "        if mut in df_pred['Mutation'].unique():           \n",
+    "            for m in pred_m:\n",
+    "                minpred = df_pred[df_pred['Mutation'] == mut][m].idxmin()\n",
+    "                if df_pred.loc[minpred][m] <= 500:\n",
+    "                    ts_pred[m].append(df_pred.loc[minpred])\n",
+    "            for m in rank_m:\n",
+    "                minrank = df_pred[df_pred['Mutation'] == mut][m].idxmin()\n",
+    "                if df_pred.loc[minrank][m] <= 2:\n",
+    "                    ts_rank[m].append(df_pred.loc[minrank])\n",
+    "                \n",
     "    # Compare recall of ranking based on Score (<=500 and top 10) and Percentile (<=2.0 and top 10)\n",
     "    print('sample', 'tp', 'fn', 'recall', 'method', 'reaction')\n",
     "    def print_recall(method, reaction, df_list):\n",
-    "        df_list_sort = sorted(df_list, key=lambda x: x[method])[:10]\n",
+    "        df_list_sort = sorted(df_list, key=lambda x: x[method])[:10]        \n",
     "        # Store vaccine compositions\n",
     "        pd.DataFrame([x['Mutation'] for x in df_list_sort]).to_csv(\n",
     "            os.path.join(basepath, basedir, sample, \"{}_{}.txt\".format(sample, method.replace(' ', ''))))\n",
@@ -261,10 +282,10 @@
     "            else:\n",
     "                recall = tp / (tp + fn)\n",
     "        print(sample, tp, fn, recall, method, reaction)\n",
-    "    print_recall('NetMHC Score', 'CD8', ts_pred)\n",
-    "    print_recall('NetMHC Percentile', 'CD8', ts_rank)\n",
-    "    print_recall('NetMHC Score', 'CD4', ts_pred)\n",
-    "    print_recall('NetMHC Percentile', 'CD4', ts_rank)"
+    "    for method in pred_m:\n",
+    "        print_recall(method, 'CD8', ts_pred[method])\n",
+    "    for method in rank_m:\n",
+    "        print_recall(method, 'CD8', ts_rank[method])"
    ]
   },
   {
@@ -301,42 +322,6 @@
    "outputs": [],
    "source": [
     "get_performance_scores(\"10000-cells.10x\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3c4f1e13",
-   "metadata": {},
-   "source": [
-    "#### CD4 Scores -  1000-cells.10x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "89e6fd47",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_performance_scores(\"1000-cells.10x\", t_cell_type=\"CD4\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "7134e67b",
-   "metadata": {},
-   "source": [
-    "#### CD4 Scores -  10000-cells.10x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f82e24f4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_performance_scores(\"10000-cells.10x\", t_cell_type=\"CD4\")"
    ]
   }
  ],
